[gd_scene format=3 uid="uid://00plb0pgo5wu"]

[ext_resource type="Script" uid="uid://cxyaisrrcuiy" path="res://UserInterface/TutorialUI/TutorialUI.gd" id="1_3tqf4"]
[ext_resource type="PackedScene" uid="uid://sqgftrvov6yl" path="res://UserInterface/TutorialUI/BrakeTutorialUI.tscn" id="1_p1b7w"]
[ext_resource type="PackedScene" uid="uid://bu6btqawnnhen" path="res://UserInterface/ButtonUI/LeftArrowMenuButtonUI.tscn" id="1_w58kj"]
[ext_resource type="PackedScene" uid="uid://hfsl18mddsa3" path="res://UserInterface/TutorialUI/CameraTutorialUI.tscn" id="2_3tqf4"]
[ext_resource type="PackedScene" uid="uid://ydx5es81hvue" path="res://UserInterface/TutorialUI/JumpTutorialUI.tscn" id="3_w58kj"]
[ext_resource type="PackedScene" uid="uid://b6vwbdga2t6ow" path="res://UserInterface/TutorialUI/PuttTutorialUI.tscn" id="4_v50ei"]
[ext_resource type="PackedScene" uid="uid://do84t40y0xhk4" path="res://UserInterface/TutorialUI/SteerTutorialUI.tscn" id="5_r5gpl"]
[ext_resource type="Texture2D" uid="uid://dj0f6triha51f" path="res://UserInterface/UIAssets/UIArrowSmall.png" id="6_gg6wq"]
[ext_resource type="Shader" uid="uid://2hqavb8513gt" path="res://UserInterface/UIAssets/Shaders/PauseBlur.gdshader" id="9_v50ei"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_r5gpl"]
shader = ExtResource("9_v50ei")
shader_parameter/blur = 0.58400002774
shader_parameter/brightness = 0.88800004218

[node name="TutorialScrollUi" type="CanvasLayer" unique_id=973886521]

[node name="Control" type="Control" parent="." unique_id=1125300728]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_3tqf4")

[node name="Brake" parent="Control" unique_id=1082330632 instance=ExtResource("1_p1b7w")]
visible = false
layout_mode = 1

[node name="BrakeBack" type="Button" parent="Control/Brake" unique_id=72036080]
z_index = 99
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -104.0
offset_right = 41.0
offset_bottom = 104.0
grow_vertical = 2
rotation = 3.1415927
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="BrakeForward" type="Button" parent="Control/Brake" unique_id=1760477762]
z_index = 99
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -104.0
offset_right = -32.0
offset_bottom = 104.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="Camera" parent="Control" unique_id=1767051041 instance=ExtResource("2_3tqf4")]
layout_mode = 1

[node name="CameraBack" type="Button" parent="Control/Camera" unique_id=1181087993]
z_index = 99
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -104.0
offset_right = 41.0
offset_bottom = 104.0
grow_vertical = 2
rotation = 3.1415927
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="CameraForward" type="Button" parent="Control/Camera" unique_id=1855684483]
z_index = 99
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -104.0
offset_right = -32.0
offset_bottom = 104.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="Jump" parent="Control" unique_id=844057714 instance=ExtResource("3_w58kj")]
visible = false
layout_mode = 1

[node name="JumpBack" type="Button" parent="Control/Jump" unique_id=884490445]
z_index = 99
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -104.0
offset_right = 41.0
offset_bottom = 104.0
grow_vertical = 2
rotation = 3.1415927
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="JumpForward" type="Button" parent="Control/Jump" unique_id=346593450]
z_index = 99
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -104.0
offset_right = -32.0
offset_bottom = 104.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="Putt" parent="Control" unique_id=1447014458 instance=ExtResource("4_v50ei")]
visible = false
layout_mode = 1

[node name="PuttBack" type="Button" parent="Control/Putt" unique_id=1286923074]
z_index = 99
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -104.0
offset_right = 41.0
offset_bottom = 104.0
grow_vertical = 2
rotation = 3.1415927
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="PuttForward" type="Button" parent="Control/Putt" unique_id=2087178763]
z_index = 99
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -104.0
offset_right = -32.0
offset_bottom = 104.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="Steer" parent="Control" unique_id=1102260921 instance=ExtResource("5_r5gpl")]
visible = false
layout_mode = 1

[node name="SteerBack" type="Button" parent="Control/Steer" unique_id=2055341096]
z_index = 99
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = -367.0
offset_top = -104.0
offset_right = 41.0
offset_bottom = 104.0
grow_vertical = 2
rotation = 3.1415927
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="SteerForward" type="Button" parent="Control/Steer" unique_id=467541220]
z_index = 99
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -440.0
offset_top = -104.0
offset_right = -32.0
offset_bottom = 104.0
grow_horizontal = 0
grow_vertical = 2
scale = Vector2(0.405, 0.405)
pivot_offset = Vector2(408, 104)
icon = ExtResource("6_gg6wq")

[node name="MenuButtonUI" parent="Control" unique_id=719326111 instance=ExtResource("1_w58kj")]
z_index = 4
layout_mode = 0
offset_left = 20.0
offset_top = 18.0
offset_right = 375.0
offset_bottom = 96.0

[node name="Button" parent="Control/MenuButtonUI/HBox" parent_id_path=PackedInt32Array(719326111, 57015838) index="0" unique_id=598183682]
text = "Back"

[node name="Blur" type="ColorRect" parent="Control" unique_id=1054052606]
z_index = -3
material = SubResource("ShaderMaterial_r5gpl")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[editable path="Control/MenuButtonUI"]
